python_grpc_mutual_tls_auth/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 31402
      name: http
      protocol: http
    hosts:
    - "rvmgrpc-dev.intel.com"
