python_grpc_mutual_tls_auth/istio/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: mtls-grpc-test
spec:
  selector:
    app: mtls-grpc-test
  type: ClusterIP
  ports:
  - name: grpc # important!
    protocol: TCP
    port: 58000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mtls-grpc-test-fault
spec:
  hosts:
  - "*"
  http:
  - fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 10s
    route:
    - destination:
        host: mtls-grpc-test
        subset: v1
